@startuml

hide empty members

class XXXView
class AddXXXView
class EditXXXView

class XXXViewModel
class AddXXXViewModel
class EditXXXViewModel

class XXXFormView

class PlanView {}

class AddPlanView {}

class EditPlanView {}

class PlanFormView

class PlanViewModel {
}

class AddPlanViewModel {
}

class EditPlanViewModel {
}

class PlanFormViewModel {
}

class PlanService {
}

class Repository {}


XXXView --> XXXViewModel
XXXView *--> PlanView
XXXViewModel --|> PlanViewModel

AddXXXView *--> AddPlanView
EditXXXView *--> EditPlanView

XXXFormView *--> PlanFormView
PlanFormView --> PlanFormViewModel

EditXXXView --> EditXXXViewModel
AddXXXView --> AddXXXViewModel

EditPlanView *--> XXXFormView
AddPlanView *--> XXXFormView

PlanView --> PlanViewModel
AddPlanView --> AddPlanViewModel
EditPlanView --> EditPlanViewModel

PlanViewModel --> PlanService
AddPlanViewModel --> PlanService
EditPlanViewModel --> PlanService

AddXXXViewModel --|> AddPlanViewModel
EditXXXViewModel --|> EditPlanViewModel

AddPlanViewModel --|> PlanFormViewModel
EditPlanViewModel --|> PlanFormViewModel

PlanService --> Repository

@enduml
